# jmbg

./: LICENSE  README.md  README.sr.md  pyproject.toml
src/jmbg/: jmbg.py
